# Web-Server

./: CMakeLists.txt  README.md  database.cpp  login.html  server.cpp  users.db
data/: users.db
include/: database.h  httplib.h
src/: database.cpp  main.cpp  server.cpp
static/: index.html
